<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <SwitchPreference
            android:defaultValue="false"
            android:key="shareLocalization"
            android:summary="@string/shareLocalization_description"
            android:title="@string/shareLocalization" />

        <ListPreference
            android:entries="@array/changeApp"
            android:entryValues="@array/changeAppValues"
            android:key="driverType"
            android:summary="@string/shareLocalization_description"
            android:title="@string/change_application" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="dayScheduleNotification"
            android:summary="@string/notifications_day_schedule_description"
            android:title="@string/notifications_day_schedule" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="chatGroupNotification"
            android:summary="@string/notifications_chat_group_description"
            android:title="@string/notifications_chat_group" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="chatPrivateNotification"
            android:summary="@string/notifications_chat_private_description"
            android:title="@string/notifications_chat_private" />

    </PreferenceCategory>

    <PreferenceCategory android:title="About">

        <Preference
            android:key="version"
            android:selectable="false"
            android:summary="1.0"
            android:title="Version" />

    </PreferenceCategory>

</PreferenceScreen>