<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        activeColor="@color/settings_switch_color"
        icon="@drawable/ic_action_whatshot"
        id="@+id/tab_hotspot"
        inActiveColor="@color/colorLine"
        title="@string/hotspot" />

    <tab
        activeColor="@color/settings_switch_color"
        icon="@drawable/ic_action_today"
        id="@+id/tab_events"
        inActiveColor="@color/colorLine"
        title="@string/events" />

    <tab
        activeColor="@color/settings_switch_color"
        icon="@drawable/category_professional_24dp"
        id="@+id/tab_finance"
        inActiveColor="@color/colorLine"
        title="@string/finance" />

    <tab
        activeColor="@color/settings_switch_color"
        icon="@drawable/ic_chat_black_24dp"
        id="@+id/tab_chat"
        inActiveColor="@color/colorLine"
        title="@string/chat" />


</tabs>