<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/feedback_custom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/feedback_normal_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/yes_work"
        android:layout_width="match_parent"
        android:text="@string/yes_work"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/button_background"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/no_work"
        android:layout_width="match_parent"
        android:text="@string/no_work"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/button_background"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/no_drive"
        android:layout_width="match_parent"
        android:text="@string/no_drive"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/button_background"
        android:layout_height="match_parent" />

</LinearLayout>